--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,6 +24,7 @@ parameters:
   app.stripe.webhook_secret: "%env(STRIPE_WEBHOOK_SECRET)%"
   app.stripe.prefill_onboarding: "%env(bool:STRIPE_PREFILL_ONBOARDING)%"
   app.stripe.enables_auto_transfer_creation: "%env(bool:ENABLES_AUTOMATIC_TRANSFER_CREATION)%"
+  app.stripe.order_payment_type: "%env(ORDER_PAYMENT_TYPE)%"
   app.mirakl.api_key: "%env(MIRAKL_API_KEY)%"
   app.mirakl.host_name: "%env(MIRAKL_HOST_NAME)%"
   app.mirakl.stripe_custom_field_code: "%env(MIRAKL_CUSTOM_FIELD_CODE)%"
@@ -52,6 +53,7 @@ services:
       $miraklHostName: "%app.mirakl.host_name%"
       $customFieldCode: "%app.mirakl.stripe_custom_field_code%"
       $enablesAutoTransferCreation: "%app.stripe.enables_auto_transfer_creation%"
+      $orderPaymentType: "%app.stripe.order_payment_type%"
       $redirectOnboarding: "%app.redirect.onboarding%"
       $operatorNotificationUrl: "%app.operator.notification_url%"
 
