Push stripe user account id in Mirakl at the end of onboarding

--- a/.env.dist
+++ b/.env.dist
@@ -90,6 +90,7 @@ MIRAKL_API_KEY=
 # Must be read-only for the seller, and you should leave it blank when creating the account.
 # Defaults to stripe-url, but you can override that.
 MIRAKL_STRIPE_URL_CUSTOM_FIELD_CODE=stripe-url
+MIRAKL_STRIPE_ID_CUSTOM_FIELD_CODE=stripe-id
 
 # The URL we will redirect the seller to after a successful account creation.
 # Will be requested by a seller, must be publicly available.
